Added background color

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <div class="main">
         <div class="projects">
-            <p>Your Projects</p>
+            <p class="section">Your Projects</p>
             <div class="card">
                 <p class="title">Article Title</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
@@ -105,7 +105,7 @@
         </div>
 
         <div class="announcement">
-            <p>Announcements</p>
+            <p class="section">Announcements</p>
             <div class="news">
                 <p class="title">Site Maintenance</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore...</p>
@@ -121,7 +121,7 @@
         </div>
 
         <div class="trending">
-            <p>Trending</p>
+            <p class="section">Trending</p>
             <div class="trending-accounts">
                 <div class="card">
                     <img id="icon" src="img/dog.svg" alt="">
