Changed text color

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="sidebar">
+        <div class="sidebar bold">
             <div class="nav">
                     <li><img id="dash-logo" src="img/view-dashboard.svg" alt=""></li>
                     <li id="dash-title">Dashboard</li>
@@ -72,7 +72,7 @@
             <div class="projects">
                 <div class="card">
                     <h4>Super Cool Project</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                    <p><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</span></p>
                     <div class="share">
                         <img id="icon" src="img/star.svg" alt="">
                         <img id="icon" src="img/eye-plus-outline.svg" alt="">
@@ -81,7 +81,7 @@
                 </div>
                 <div class="card">
                     <h4>Less Cool Project</h4>
-                    <p>Vulputate sapien nec sagittis aliquam. Vestibulum mattis ullamcorper velit sed ullamcorper. Et netus et malesuada fames ac.</p>
+                    <p><span>Vulputate sapien nec sagittis aliquam. Vestibulum mattis ullamcorper velit sed ullamcorper. Et netus et malesuada fames ac.</span></p>
                     <div class="share">
                         <img id="icon" src="img/star.svg" alt="">
                         <img id="icon" src="img/eye-plus-outline.svg" alt="">
@@ -90,7 +90,7 @@
                 </div>
                 <div class="card">
                     <h4>Impossible App</h4>
-                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p><span>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span></p>
                     <div class="share">
                         <img id="icon" src="img/star.svg" alt="">
                         <img id="icon" src="img/eye-plus-outline.svg" alt="">
@@ -99,7 +99,7 @@
                 </div>
                 <div class="card">
                     <h4>Easy Peasy App</h4>
-                    <p>Ipsum nunc aliquet bibendum enim facilisis gravida neque convallis a. Phasellus vestibulum lorem sed risus. A erat nam at lectus urna duis convallis convallis. </p>
+                    <p><span>Ipsum nunc aliquet bibendum enim facilisis gravida neque convallis a. Phasellus vestibulum lorem sed risus. A erat nam at lectus urna duis convallis convallis. </span></p>
                     <div class="share">
                         <img id="icon" src="img/star.svg" alt="">
                         <img id="icon" src="img/eye-plus-outline.svg" alt="">
@@ -108,7 +108,7 @@
                 </div>
                 <div class="card">
                     <h4>Ad Blocker</h4>
-                    <p>Suspendisse in est ante in. Venenatis cras sed felis eget velit aliquet sagittis. Ac odio tempor orci dapibus ultrices in iaculis nunc sed.</p>
+                    <p><span>Suspendisse in est ante in. Venenatis cras sed felis eget velit aliquet sagittis. Ac odio tempor orci dapibus ultrices in iaculis nunc sed.</span></p>
                     <div class="share">
                         <img id="icon" src="img/star.svg" alt="">
                         <img id="icon" src="img/eye-plus-outline.svg" alt="">
@@ -117,7 +117,7 @@
                 </div>
                 <div class="card">
                     <h4>Money Maker</h4>
-                    <p>Amet luctus venenatis lectus magna. A cras semper auctor neque. Cum sociis natoque penatibus et magnis dis parturient montes. Sed enim ut sem viverra aliquet eget.</p>
+                    <p><span>Amet luctus venenatis lectus magna. A cras semper auctor neque. Cum sociis natoque penatibus et magnis dis parturient montes. Sed enim ut sem viverra aliquet eget.</span></p>
                     <div class="share">
                         <img id="icon" src="img/star.svg" alt="">
                         <img id="icon" src="img/eye-plus-outline.svg" alt="">
@@ -130,13 +130,13 @@
             <div class="announcement">
                 <div class="news">
                     <h4>Site Maintenance</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Amet luctus venenatis lectus magna....</p>
+                    <p><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore. Amet luctus venenatis lectus magna....</span></p>
                     <hr>
                     <h4>Community Share Day</h4>
-                    <p>Sed enim ut sem viverra aliquet eget. A cras semper auctor neque. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore...</p>
+                    <p><span>Sed enim ut sem viverra aliquet eget. A cras semper auctor neque. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore...</span></p>
                     <hr>
                     <h4>Updated Privacy Policy</h4>
-                    <p>Amet luctus venenatis lectus magna. A cras semper auctor neque. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore...</p>
+                    <p><span>Amet luctus venenatis lectus magna. A cras semper auctor neque. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore...</span></p>
                 </div>
 
                 <p class="section">Trending</p>
